fixes header jump

--- a/src/shared/css/main.css
+++ b/src/shared/css/main.css
@@ -490,3 +490,6 @@ input[type='number'] {
   width: auto;
   borderRadius: 100px;
 }
+body{
+  overflow-y: scroll;
+}
